# PolarVortex

./: .gitignore  CMakeLists.txt  README.md  build.bat
FontEditor/: App.xaml  FontEditor.csproj  FontEditor.sln  GlyphEditor.cs  MainWindow.xaml  MainWindow.xaml.cs  SpriteFont.cs
WorldEditor/: App.xaml  CreateWorldWindow.xaml  CreateWorldWindow.xaml.cs  GridElement.cs  MainWindow.xaml  MainWindow.xaml.cs  StartWindow.xaml  StartWindow.xaml.cs  TilePicker.xaml  TilePicker.xaml.cs  Window.cs  WorldEditor.csproj  WorldEditor.sln  WorldElement.cs
WorldEditor/Actions/: Action.cs  ActionGroup.cs  AddGridAction.cs  MoveGridAction.cs  ResizeGridAction.cs  SetTileAction.cs  SetTileCollisionAction.cs  UndoContext.cs
WorldEditor/Graphics/: add_grid_16px.xaml  minus_16px.xaml  plus_16px.xaml  redo_16px.xaml  save_16px.xaml  tool_background_32px.xaml  tool_brush_32px.xaml  tool_collision_32px.xaml  tool_decor_32px.xaml  tool_entities_new_32px.xaml  tool_grids_32px.xaml  undo_16px.xaml
WorldEditor/Models/: Grid.cs  TilePalette.cs  World.cs  WorldTile.cs
assets/fonts/: vortex-body.pvf
assets/shaders/: SpritePixelShader.glsl  SpriteVertexShader.glsl  TileVertexShader.glsl
assets/sprites/character/: character_crouch.pva  character_idle.json  character_idle.pva  character_jump.pva  character_run.pva
assets/tilemaps/: 32px.pvp  grassland.pvp
assets/worlds/: 32px_test.pvw  bigroom.pvw  test.pvw
include/: Hash.h
include/assets/: Asset.h  AssetManager.h  Assets.md
include/collections/: BoundedArrayList.h  Iterable.h  Iterator.h
include/game/: Camera.h  PolarVortexGame.h  Screen.h  Viewport.h  Window.h
include/input/: GLFWGamepadAxisElement.h  GLFWGamepadButtonElement.h  GLFWGamepadDevice.h  InputDevice.h  InputElement.h
include/memory/: Allocator.h  IterablePoolAllocator.h  Memory.h  PoolAllocator.h  StackAllocator.h
include/render/: GLMesh.h  GLRenderer.h  GLShaderProgram.h  GLTexture.h  GLVertexAttribute.h  Math.h  Sprite.h  SpriteAnimation.h  SpriteFont.h  SpriteFrame.h  SpriteInstance.h  glad.h
include/screens/: MainMenuScreen.h  WorldScreen.h
include/ui/: UIAlignment.h  UIAnimation.h  UIButton.h  UIContainer.h  UIDockContainer.h  UIElement.h  UIMargins.h  UIRectangle.h  UISprite.h  UITextBlock.h
include/world/: BoundingBox.h  Collider.h  Collision.h  DynamicCollider.h  Grid.h  GridBlueprint.h  Object.h  Player.h  TilePalette.h  World.h  WorldBlueprint.h
src/: main.cpp
src/assets/: AssetManager.cpp
src/game/: PolarVortexGame.cpp  Screen.cpp  Viewport.cpp  Window.cpp
src/input/: GLFWGamepadAxisElement.cpp  GLFWGamepadButtonElement.cpp  GLFWGamepadDevice.cpp
src/memory/: Memory.cpp  StackAllocator.cpp
src/render/: GLMesh.cpp  GLRenderer.cpp  GLShaderProgram.cpp  GLTexture.cpp  Math.cpp  SpriteAnimation.cpp  SpriteFont.cpp  SpriteInstance.cpp  glad.c  stb_image.c
src/screens/: MainMenuScreen.cpp  WorldScreen.cpp
src/tests/: tests.cpp
src/ui/: UIAnimation.cpp  UIButton.cpp  UIDockContainer.cpp  UIElement.cpp  UISprite.cpp  UITextBlock.cpp
src/world/: Collision.cpp  Grid.cpp  GridBlueprint.cpp  Player.cpp  TilePalette.cpp  World.cpp  WorldBlueprint.cpp
